style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-weight: bolder;
}

html {
    height: 100%;
    display: flex;
}

body {
    display: flex;
    flex-flow: column;
    text-align: center;
    flex: 1;
}

.btn {
    padding: .5rem;
    font-size: 1rem;
    margin: 1rem;
}

#content {
    /* font-size: 12rem; */
    display: flex;
    flex-flow: column;
    flex: 1;
}

#controls {
    display: flex;
}

#controls > * {
    flex: 1;
}

.left-column {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    /* border: 1px solid red; */
}

.left-column:first-child {
    margin-left: .5rem;
}

#word-count {
    font-size: 2rem;
    min-width: 4.5rem;
}

.right-column {
    display: flex;
    justify-content: center;
    align-content: center;
    align-items: center;
    flex-flow: column;
}

#guess-area {
    /* border: 1px solid red; */
    display: flex;
    flex-flow: column;
    justify-content: center;
    align-items: center;
    flex: 1;
    gap: 1rem;
    padding: 1rem;
    flex: 1;
}

.guess-area-row {
    display: flex;
    gap: 1rem
}

.guess-area-tile {
    border: solid 1px black;
    min-width: 5rem;
    min-height: 5rem;
    /* font-size: 4rem; */
    padding: .5rem;
}

#letter-bank {
    /* border: 1px solid red; */
    display: flex;
    flex-flow: column;
    gap: 1rem;
    padding: 1rem;
}

.letter-bank-row {
    display: flex;
    justify-content: center;
    gap: 1rem;
    width: 100%;
}

.letter-bank-tile {
    /* border: 1px solid black; */
    padding: 1rem;
    background-color: lightgray;
    font-size: 2rem;
}

.not-in {
    background-color: darkgrey;    
}

.misplaced {
    background-color: yellow;    
}

.correct {
    background-color: green;    
}

footer {
    background-color: gray;
    padding: .25%;
}

a {
    color: white;
    text-decoration: none;
    text-align: center;
}

.word-div {
    /* border: 1px solid blue; */
    width: 20%;
}

.word {
    /* border: 1px solid red; */
}

.word:hover,
.word:focus {
  background-color: gray;
  text-decoration: none;
  cursor: pointer;
}

/* The Modal (background) */
#modal {
    display: none; /* Hidden by default */
    justify-content: center;
    align-items: center;
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}
  
/* Modal Content/Box */
#modal-content {
    background-color: #fefefe;
    font-size: 3rem;
     /* x% from the top and centered */
    padding: 2%;
    border: 1px solid #888;
    max-height: 90%;
    max-width: 90%;
    display: flex;
    flex-flow: column;
    /* align-items: center; */
    justify-content: center;
}

#modal-msg {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 2rem;
    flex: 1;
}

#modal-text {
    /* border: 2px solid red; */
    display: flex;
    flex-wrap: wrap;
    gap: .5rem;
    overflow-y: scroll;

}


/* The Close Button */
#modal-close {
    /* border: 2px solid red; */
    color: #aaa;
    text-align: right;
}
  
#modal-close:hover,
#modal-close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

